# triton-kernel-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: rtx-5070-ti-decode-roofline.json  rtx-5070-ti-int4-gemv.json  rtx-5070-ti-paged-gather.json  rtx-5070-ti-qk-dot.json  rtx-5070-ti-residual-rmsnorm.json  rtx-5070-ti-rmsnorm-swiglu.json  rtx-5070-ti-rmsnorm.json  rtx-5070-ti-selective-attention.json
docs/: METHODOLOGY.md
src/triton_kernel_lab/: __init__.py  benchmark.py  int4_gemv.py  nsight.py  paged_gather.py  profile_target.py  qk_dot.py  report.py  residual_rmsnorm.py  rmsnorm.py  roofline.py  selective_attention.py  swiglu.py
tests/: test_cli.py  test_report.py  test_roofline.py
