[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-kernel-lab"
version = "0.1.0"
description = "Correctness-first Triton kernel benchmarks for inference workloads"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "WaffleBits"}]
keywords = [
    "gpu",
    "triton",
    "pytorch",
    "inference",
    "performance-engineering",
    "rmsnorm",
    "swiglu",
    "autotuning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
gpu = [
    "numpy>=2.0",
    "torch>=2.9",
    "triton>=3.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[project.scripts]
triton-kernel-lab = "triton_kernel_lab.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
